pkgs/djson/src/lexer/snapshots/djson__lexer__tests__diagnostics.snap
---
source: pkgs/djson/src/lexer/mod.rs
expression: cases
---
int overflow
error: `lexer::invalid_number
        
          x invalid number
           ,-[input.dj:3:15]
         2 |     foo: 1
         3 |     overflow: 9223372036854775808
           :               ^^^^^^^^^|^^^^^^^^^
           :                        `-- integer: too large
         4 |     bar: 2
           `----`

int invalid separator
error: `lexer::invalid_number
        
          x invalid number
           ,-[input.dj:3:13]
         2 |     foo: 1
         3 |     sep: 123___''_456
           :             ^^^|^^
           :                `-- invalid separator
         4 |     bar: 2
           `----`

unterminated string
error: `lexer::unterminated_string
        
          x unterminated string
           ,-[input.dj:3:19]
         2 |     foo: 1
         3 |     unterminated: "hello world
           :                   |
           :                   `-- string starts here
         4 |     bar: 2
           `----`

unterminated block comment
error: `lexer::unterminated_comment
        
          x unterminated block comment
           ,-[input.dj:3:27]
         2 |     foo: 1
         3 |     unterminated: "block" /* comment
           :                           |
           :                           `-- comment starts here
         4 |     bar: 2
           `----`
