pkgs/djson/src/lexer/snapshots/djson__lexer__tests__errors.snap
---
source: pkgs/djson/src/lexer/mod.rs
expression: cases
---
integer overflow
input: `9223372036854775808`
error: invalid integer

trailing num separator
input: `100_`
error: invalid number separator

num separator sequence
input: `1__000`
error: invalid number separator

heterogenous num separator sequence
input: `1_'000`
error: invalid number separator

unterminated string
input: `"unterminated`
error: unterminated string
